[gd_scene load_steps=2 format=3 uid="uid://c8m1r23w5tydn"]

[ext_resource type="Script" uid="uid://dnv1jitlqwe8u" path="res://scripts/killzone.gd" id="1_xlapc"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_xlapc")

[node name="KillTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
ignore_time_scale = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
